fixed button z-index

--- a/src/BlogDetails/blogdetails.css
+++ b/src/BlogDetails/blogdetails.css
@@ -189,3 +189,7 @@ h2 {
     font-weight: 300;
     line-height: 1.5em;
 }
+.blog-details button {
+    position: relative;
+    z-index: 9;
+}
